--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                    <a class="nav-link nav-menu ms-1 me-1 text-center" aria-current="page" href="#home">Home</a>
-                    <a class="nav-link nav-menu ms-1 me-1 text-center" href="#services">Services</a>
-                    <a class="nav-link nav-menu ms-1 me-lg-3 text-center" href="#projects">Projects</a>
-                    <a href="#contact" style="color:white; text-decoration:none;">
+                    <a class="nav-link nav-menu ms-1 me-1 text-center" aria-current="page" href="https://taystan.design/#home">Home</a>
+                    <a class="nav-link nav-menu ms-1 me-1 text-center" href="https://taystan.design/#services">Services</a>
+                    <a class="nav-link nav-menu ms-1 me-lg-3 text-center" href="https://taystan.design/#projects">Projects</a>
+                    <a href="https://taystan.design/#contact" style="color:white; text-decoration:none;">
                       <button class="btn rounded-pill contact-btn me-2 w-100" type="button">
                         Contact
                       </button>
@@ -264,16 +264,16 @@
     <div class="col-12 col-lg-4 d-flex align-items-center justify-content-center flex-row">
         <ul class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-0 p-0 pt-0 pt-3 pb-0 pb-3">
             <li class="p-lg-4 p-2">
-                <a href="#home">Home</a>
+                <a href="https://taystan.design/#home">Home</a>
             </li>
             <li class="p-lg-4 p-2">
-                <a href="#services">Services</a>
+                <a href="https://taystan.design/#services">Services</a>
             </li>
             <li class="p-lg-4 p-2">
-                <a href="#projects">Projects</a>
+                <a href="https://taystan.design/#projects">Projects</a>
             </li>
             <li class="p-lg-4 p-2">
-                <a href="#contact">Contact</a>
+                <a href="https://taystan.design/#contact">Contact</a>
             </li>
         </ul>
     </div>
