--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 <!-- FAQ -->
-<!-- <section class="pt-5 mt-5">
+<section class="pt-5 mt-5">
     <div class="container mx-auto d-flex justify-content-center align-items-center flex-column mb-2">
         <img src="./images/Undraw - business Meeting.png" alt="Credit: Undraw - Business Meeting" class="img-fluid" draggable="false">
         <h1 class="contact-title pt-3 text-center pb-3">Frequently Asked Questions</h1>
@@ -185,7 +185,7 @@
             </ul>
         </div>
     </div>
-</section> -->
+</section>
 
 <!-- Contact Info -->
 <section class="pt-5 mt-5">
