fixed link and info in FAQ

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </section>
 
 
-<!-- FAQ -->
+<!--FAQ -->
 <section class="pt-5 mt-5">
     <div class="container mx-auto d-flex justify-content-center align-items-center flex-column mb-2">
         <img src="./images/Undraw - business Meeting.png" alt="Credit: Undraw - Business Meeting" class="img-fluid" draggable="false">
@@ -164,7 +164,7 @@
                 <p>I have over 2 years of professional experience as a full-time Web Designer. I&#39;m a graduate from the University of Central Florida, with my Bachelor&#39;s in Digital Media: Web Design and minor in Information Technology.</p>
 
                 <li class="fw-bold mb-2">2. How long does it typically take to complete a project?</li>
-                <p>The length of time typically depends on the project's needs, say from a website re-design to starting from scratch, but it can range to be between 4-6 weeks for delivery.
+                <p>The length of time typically depends on the project's needs, say from a website re-design to starting from scratch, but it can range to be between 2-6 weeks for delivery.
                 </p>
 
                 <li class="fw-bold mb-2">3. How do you handle revisions or changes during the project?</li>
@@ -175,7 +175,7 @@
         <div class="col-12 col-lg-6 p-lg-5">
             <ul>
                 <li class="fw-bold mb-2">4. Do you offer ongoing support and maintenance?</li>
-                <p>Yes! There is an upfront cost for of $200 for yearly maintenance and hosting of the site, or $25 per month. Depending on the request, changes can be included in the maintenance fee or an additional $25/hr until completion.</p>
+                <p>Yes! There is an upfront cost for yearly maintenance and hosting of the site, or priced per month depending on the package selected. <a href='https://updates.taystan.design/' class='inline-link'>More information on the types of packages can be found here.</a> Depending on the request, changes can be included in the maintenance fee or an additional $25/hr until completion.</p>
 
                 <li class="fw-bold mb-2">5. What is your pricing structure? Hourly or by project?</li>
                 <p>Most projects are agreed to be a flat fee via the pricing plans or as discussed with a custom website. When there are additional tasks outside of the project scope, then there is a charge of $25/hr with 1 hour being the minimum.</p>
